--- a/nextgen.html
+++ b/nextgen.html
@@ -6,12 +6,12 @@
     <title>nextgen</title>
     <link rel="stylesheet" href="./nextgen.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main-div">
-        <h1 id="logo">Next Gen IT Acdamay</h1>
+        <h1 id="logo">Next Gen IT Acdemay</h1>
         <form>
             <div class="signup-form">
                 <div class="heading">
@@ -35,7 +35,7 @@
                     <div class="dob">
                         <div class="box3">
                             <select>
-                                <option>Day</option>
+                                <option class="option ">Day</option>
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
@@ -72,7 +72,7 @@
                         </div>
                         <div class="box3">
                             <select>
-                                <option>Month</option>
+                                <option class="option">Month</option>
                                 <option>Jan</option>
                                 <option>Feb</option>
                                 <option>Mar</option>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="box3">
                             <select>
-                                <option>Year</option>
+                                <option class="option">Year</option>
                                 <option>1990</option>
                                 <option>1991</option>
                                 <option>1992</option>
